# ZHI-Flashtools

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
resources/: app.rc  resources.qrc
src/core/: Logger.cpp  Logger.h
src/examples/: EdlFlashExample.cpp
src/firmware/: PatchParser.cpp  PatchParser.h  RawProgramParser.cpp  RawProgramParser.h  ScatterParser.cpp  ScatterParser.h  XmlLite.cpp  XmlLite.h
src/protocol/adb/: AdbAuth.cpp  AdbAuth.h  AdbProtocol.cpp  AdbProtocol.h
src/protocol/edl/: EdlTypes.h  FirehoseProtocol.cpp  FirehoseProtocol.h  SaharaProtocol.cpp  SaharaProtocol.h
src/protocol/fastboot/: FastbootProtocol.cpp  FastbootProtocol.h
src/protocol/mtk/: BromProtocol.cpp  BromProtocol.h  DaProtocol.cpp  DaProtocol.h
src/ui/: DwmEffects.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  Theme.h  main.cpp
src/usb/: UsbDevice.cpp  UsbDevice.h
tests/: test_firmware_parsers.cpp  test_scatter_parser.cpp
